--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "laravel/laravel",
-    "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "name": "tonylaurent/verbal",
+    "description": "Minimalist blog engine driven by command line.",
+    "keywords": ["verbal", "blog", "minimalist"],
     "license": "MIT",
     "type": "project",
     "require": {
