--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,12 @@ php:
   - "7.1"
 
 before_script:
+  - cp .env.travis .env
+  - mysql -e 'create database homestead_test;'
   - composer self-update
   - composer install --no-interaction
-  
+  - php artisan key:generate
+  - php artisan migrate
+
 script:
   - vendor/bin/phpunit
