--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,8 @@
     },
     "scripts": {
         "post-root-package-install": [
-            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\"",
+            "touch database/verbal.sqlite"
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate"
