Add auto migrate

--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,8 @@
             "touch database/verbal.sqlite"
         ],
         "post-create-project-cmd": [
-            "@php artisan key:generate"
+            "@php artisan key:generate",
+            "@php artisan migrate"
         ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
