--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,8 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate",
-            "@php artisan migrate"
+            "@php artisan migrate",
+            "@php artisan vendor:publish --tag=theme"
         ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
