--- a/composer.json
+++ b/composer.json
@@ -50,7 +50,8 @@
         "post-create-project-cmd": [
             "@php artisan key:generate",
             "@php artisan migrate",
-            "@php artisan vendor:publish --tag=theme"
+            "@php artisan vendor:publish --tag=theme",
+            "@php artisan storage:link"
         ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
